Fix overflow bug

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -5,7 +5,7 @@
   row-gap: 40px
 
   @media screen and (max-width: $break-medium)
-    grid-template-columns: 1fr
+    grid-template-columns: minmax(0, 1fr)
 
 .product-breadcrumb
   margin-bottom: 16px
